ui-ux: Fix 'Clients' section spacing

--- a/css/components/_clients.scss
+++ b/css/components/_clients.scss
@@ -1,5 +1,6 @@
 .clients {
-    padding: 4rem 0;
+    padding: 2rem 0 1rem;
+    
     .clients-list {
         display: flex;
         flex-wrap: wrap;
